# ros-qt-integeration

./: CMakeLists.txt  package.xml
Sources/: main.cpp  widget.cpp
